upgrading the model, messing with 2d convulational layers

--- a/pytorch_play/basics/deep_learning_blitz.ipynb
+++ b/pytorch_play/basics/deep_learning_blitz.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "e59980b3",
+   "id": "edd77358",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "12f2fb0e",
+   "id": "296bc7b9",
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "22678eb6",
+   "id": "0fdd5773",
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "4cab6371",
+   "id": "e756d42b",
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "e6379f78",
+   "id": "3529a5da",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "c97527f2",
+   "id": "4e154a8c",
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +146,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "df01fd3e",
+   "id": "9b22a41a",
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "236447b5",
+   "id": "231d7e97",
    "metadata": {},
    "source": [
     "# Deep Learning Image Classification "
@@ -177,7 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "df9c0776",
+   "id": "b334dc4c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +189,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "2358675c",
+   "id": "ef2b20af",
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +247,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "9d4671e4",
+   "id": "7313278e",
    "metadata": {},
    "outputs": [
     {
@@ -295,10 +295,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "e908d7dd",
+   "execution_count": 71,
+   "id": "b401a7d8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Net(\n",
+       "  (conv1): Conv2d(3, 32, kernel_size=(5, 5), stride=(1, 1))\n",
+       "  (pool): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+       "  (conv2): Conv2d(32, 64, kernel_size=(5, 5), stride=(1, 1))\n",
+       "  (conv3): Conv2d(64, 64, kernel_size=(5, 5), stride=(1, 1))\n",
+       "  (fc1): Linear(in_features=64, out_features=120, bias=True)\n",
+       "  (fc2): Linear(in_features=120, out_features=84, bias=True)\n",
+       "  (fc3): Linear(in_features=84, out_features=10, bias=True)\n",
+       ")"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Define CNN \n",
     "import torch.nn as nn\n",
@@ -308,16 +327,18 @@
     "class Net(nn.Module):\n",
     "    def __init__(self):\n",
     "        super().__init__()\n",
-    "        self.conv1 = nn.Conv2d(3, 6, 5)\n",
+    "        self.conv1 = nn.Conv2d(3, 32, 5)\n",
     "        self.pool = nn.MaxPool2d(2, 2)\n",
-    "        self.conv2 = nn.Conv2d(6, 16, 5)\n",
-    "        self.fc1 = nn.Linear(16 * 5 * 5, 120)\n",
+    "        self.conv2 = nn.Conv2d(32, 64, 5)\n",
+    "        self.conv3 = nn.Conv2d(64, 64, 5)\n",
+    "        self.fc1 = nn.Linear(64 * 1 * 1, 120)\n",
     "        self.fc2 = nn.Linear(120, 84)\n",
     "        self.fc3 = nn.Linear(84, 10)\n",
     "\n",
     "    def forward(self, x):\n",
     "        x = self.pool(F.relu(self.conv1(x)))\n",
     "        x = self.pool(F.relu(self.conv2(x)))\n",
+    "        x = F.relu(self.conv3(x))\n",
     "        x = torch.flatten(x, 1) # flatten all dimensions except batch\n",
     "        x = F.relu(self.fc1(x))\n",
     "        x = F.relu(self.fc2(x))\n",
@@ -325,13 +346,14 @@
     "        return x\n",
     "\n",
     "\n",
-    "net = Net()"
+    "net = Net()\n",
+    "net"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "723d890f",
+   "execution_count": 72,
+   "id": "fdb8f7d6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,38 +361,45 @@
     "import torch.optim as optim\n",
     "\n",
     "criterion = nn.CrossEntropyLoss()\n",
-    "optimizer = optim.SGD(net.parameters(), lr=0.001, momentum=0.9)"
+    "#optimizer = optim.SGD(net.parameters(), lr=0.001, momentum=0.9)\n",
+    "optimizer = optim.Adam(net.parameters(), lr=0.001)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "c76e35b9",
-   "metadata": {},
+   "execution_count": null,
+   "id": "b1258811",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1,  2000] loss: 2.244\n",
-      "[1,  4000] loss: 1.898\n",
-      "[1,  6000] loss: 1.703\n",
-      "[1,  8000] loss: 1.601\n",
-      "[1, 10000] loss: 1.530\n",
-      "[1, 12000] loss: 1.477\n",
-      "[2,  2000] loss: 1.413\n",
-      "[2,  4000] loss: 1.389\n",
-      "[2,  6000] loss: 1.370\n",
-      "[2,  8000] loss: 1.332\n",
-      "[2, 10000] loss: 1.298\n",
-      "[2, 12000] loss: 1.289\n",
-      "Finished Training\n"
+      "[1,  2000] loss: 1.920\n",
+      "[1,  4000] loss: 1.639\n",
+      "[1,  6000] loss: 1.557\n",
+      "[1,  8000] loss: 1.470\n",
+      "[1, 10000] loss: 1.440\n",
+      "[1, 12000] loss: 1.398\n",
+      "[2,  2000] loss: 1.344\n",
+      "[2,  4000] loss: 1.300\n",
+      "[2,  6000] loss: 1.281\n",
+      "[2,  8000] loss: 1.293\n",
+      "[2, 10000] loss: 1.236\n",
+      "[2, 12000] loss: 1.223\n",
+      "[3,  2000] loss: 1.168\n",
+      "[3,  4000] loss: 1.152\n",
+      "[3,  6000] loss: 1.156\n",
+      "[3,  8000] loss: 1.138\n",
+      "[3, 10000] loss: 1.127\n"
      ]
     }
    ],
    "source": [
     "# training\n",
-    "for epoch in range(2):  # loop over the dataset multiple times\n",
+    "for epoch in range(10):  # loop over the dataset multiple times\n",
     "\n",
     "    running_loss = 0.0\n",
     "    for i, data in enumerate(trainloader, 0):\n",
@@ -397,8 +426,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "163e661c",
+   "execution_count": 45,
+   "id": "40daacbf",
    "metadata": {},
    "outputs": [
     {
@@ -433,8 +462,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "f334500c",
+   "execution_count": 46,
+   "id": "947ab7c6",
    "metadata": {
     "scrolled": false
    },
@@ -442,17 +471,17 @@
     {
      "data": {
       "text/plain": [
-       "tensor([[-2.1042, -2.2842,  1.1218,  2.6858,  0.6539,  2.2749,  1.3421,  0.1582,\n",
-       "         -2.4492, -1.8786],\n",
-       "        [ 4.9831,  6.9273, -1.5905, -3.4906, -3.1054, -5.1614, -3.9978, -5.0013,\n",
-       "          7.7407,  3.5084],\n",
-       "        [ 1.8392,  3.3641, -0.6420, -1.3181, -1.7653, -2.6236, -1.9719, -1.6420,\n",
-       "          2.8149,  2.5652],\n",
-       "        [ 3.3298,  1.0624,  0.1687, -1.2559, -0.8362, -3.0491, -2.4868, -2.2176,\n",
-       "          4.1014,  0.7924]], grad_fn=<AddmmBackward0>)"
+       "tensor([[-2.8316, -2.4102, -4.2383, 11.5333, -3.9155,  8.0073,  3.0584, -2.4534,\n",
+       "          0.4686, -5.6444],\n",
+       "        [ 8.5944, 12.8058, -7.2924, -9.7063, -9.7219, -5.2240, -5.1813, -9.5875,\n",
+       "         22.2639,  5.1489],\n",
+       "        [ 2.4960,  1.5197, -0.5330, -1.4533, -1.1294, -1.1889, -1.0211, -3.1641,\n",
+       "          4.1252,  0.3412],\n",
+       "        [ 6.5885, -1.5851,  1.1628,  2.1218,  0.1511, -3.1658, -4.8285, -2.5244,\n",
+       "          4.8193,  0.0476]], grad_fn=<AddmmBackward0>)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -465,15 +494,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "d75f585c",
+   "execution_count": 47,
+   "id": "f26a6e96",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Predicted:  cat   ship  car   ship \n"
+      "Predicted:  cat   ship  ship  plane\n"
      ]
     }
    ],
@@ -487,15 +516,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "8131c570",
+   "execution_count": 48,
+   "id": "789359d8",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy of the network on the 10000 test images: 53 %\n"
+      "Accuracy of the network on the 10000 test images: 70 %\n"
      ]
     }
    ],
@@ -519,24 +548,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "91324c0c",
+   "execution_count": 49,
+   "id": "7cb78aaa",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy for class: plane is 60.5 %\n",
-      "Accuracy for class: car   is 71.3 %\n",
-      "Accuracy for class: bird  is 30.5 %\n",
-      "Accuracy for class: cat   is 26.8 %\n",
-      "Accuracy for class: deer  is 36.0 %\n",
-      "Accuracy for class: dog   is 40.9 %\n",
-      "Accuracy for class: frog  is 80.5 %\n",
-      "Accuracy for class: horse is 63.6 %\n",
-      "Accuracy for class: ship  is 59.3 %\n",
-      "Accuracy for class: truck is 69.5 %\n"
+      "Accuracy for class: plane is 79.3 %\n",
+      "Accuracy for class: car   is 77.5 %\n",
+      "Accuracy for class: bird  is 55.1 %\n",
+      "Accuracy for class: cat   is 60.2 %\n",
+      "Accuracy for class: deer  is 63.9 %\n",
+      "Accuracy for class: dog   is 52.0 %\n",
+      "Accuracy for class: frog  is 78.6 %\n",
+      "Accuracy for class: horse is 75.7 %\n",
+      "Accuracy for class: ship  is 86.2 %\n",
+      "Accuracy for class: truck is 80.2 %\n"
      ]
     }
    ],
@@ -567,18 +596,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b53a4295",
+   "execution_count": 35,
+   "id": "42b4ecfc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cpu\n"
+     ]
+    }
+   ],
    "source": [
-    "# Train on G"
+    "# Train on GPU if available \n",
+    "device = torch.device('cuda:0' if torch.cuda.is_available() else 'cpu')\n",
+    "\n",
+    "# Assuming that we are on a CUDA machine, this should print a CUDA device:\n",
+    "\n",
+    "print(device)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4613bebc",
+   "id": "d5100070",
    "metadata": {},
    "outputs": [],
    "source": []
