--- a/pytorch_play/basics/deep_learning_blitz.ipynb
+++ b/pytorch_play/basics/deep_learning_blitz.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "edd77358",
+   "id": "260f73b9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "296bc7b9",
+   "id": "30427790",
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "0fdd5773",
+   "id": "45ea9a4a",
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "e756d42b",
+   "id": "b5e38f8b",
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "3529a5da",
+   "id": "53f35a81",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "4e154a8c",
+   "id": "92f456f2",
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +146,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "9b22a41a",
+   "id": "552824d0",
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "231d7e97",
+   "id": "2a0159a4",
    "metadata": {},
    "source": [
     "# Deep Learning Image Classification "
@@ -177,7 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "b334dc4c",
+   "id": "9d016e78",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +189,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "ef2b20af",
+   "id": "9c14b83e",
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +247,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "7313278e",
+   "id": "e9041329",
    "metadata": {},
    "outputs": [
     {
@@ -295,8 +295,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
-   "id": "b401a7d8",
+   "execution_count": 86,
+   "id": "b280ed51",
    "metadata": {},
    "outputs": [
     {
@@ -307,13 +307,13 @@
        "  (pool): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
        "  (conv2): Conv2d(32, 64, kernel_size=(5, 5), stride=(1, 1))\n",
        "  (conv3): Conv2d(64, 64, kernel_size=(5, 5), stride=(1, 1))\n",
-       "  (fc1): Linear(in_features=64, out_features=120, bias=True)\n",
-       "  (fc2): Linear(in_features=120, out_features=84, bias=True)\n",
-       "  (fc3): Linear(in_features=84, out_features=10, bias=True)\n",
+       "  (fc1): Linear(in_features=64, out_features=32, bias=True)\n",
+       "  (fc2): Linear(in_features=32, out_features=16, bias=True)\n",
+       "  (fc3): Linear(in_features=16, out_features=10, bias=True)\n",
        ")"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -331,9 +331,9 @@
     "        self.pool = nn.MaxPool2d(2, 2)\n",
     "        self.conv2 = nn.Conv2d(32, 64, 5)\n",
     "        self.conv3 = nn.Conv2d(64, 64, 5)\n",
-    "        self.fc1 = nn.Linear(64 * 1 * 1, 120)\n",
-    "        self.fc2 = nn.Linear(120, 84)\n",
-    "        self.fc3 = nn.Linear(84, 10)\n",
+    "        self.fc1 = nn.Linear(64 * 1 * 1, 32)\n",
+    "        self.fc2 = nn.Linear(32, 16)\n",
+    "        self.fc3 = nn.Linear(16, 10)\n",
     "\n",
     "    def forward(self, x):\n",
     "        x = self.pool(F.relu(self.conv1(x)))\n",
@@ -352,8 +352,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
-   "id": "fdb8f7d6",
+   "execution_count": 87,
+   "id": "b7f57864",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,8 +367,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b1258811",
+   "execution_count": 83,
+   "id": "9992d496",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([1, 3, 32, 32])\n",
+      "torch.Size([1, 32, 14, 14])\n",
+      "torch.Size([1, 64, 5, 5])\n",
+      "torch.Size([1, 64, 1, 1])\n",
+      "torch.Size([1, 64])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Testing shapes \n",
+    "test_model = Net() \n",
+    "batch_img, batch_feature = next(iter(trainloader))\n",
+    "pred = test_model(batch_img[:1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "id": "689a4cfd",
    "metadata": {
     "scrolled": true
    },
@@ -377,23 +402,67 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1,  2000] loss: 1.920\n",
-      "[1,  4000] loss: 1.639\n",
-      "[1,  6000] loss: 1.557\n",
-      "[1,  8000] loss: 1.470\n",
-      "[1, 10000] loss: 1.440\n",
-      "[1, 12000] loss: 1.398\n",
-      "[2,  2000] loss: 1.344\n",
-      "[2,  4000] loss: 1.300\n",
-      "[2,  6000] loss: 1.281\n",
-      "[2,  8000] loss: 1.293\n",
-      "[2, 10000] loss: 1.236\n",
-      "[2, 12000] loss: 1.223\n",
-      "[3,  2000] loss: 1.168\n",
-      "[3,  4000] loss: 1.152\n",
-      "[3,  6000] loss: 1.156\n",
-      "[3,  8000] loss: 1.138\n",
-      "[3, 10000] loss: 1.127\n"
+      "[1,  2000] loss: 1.975\n",
+      "[1,  4000] loss: 1.675\n",
+      "[1,  6000] loss: 1.555\n",
+      "[1,  8000] loss: 1.492\n",
+      "[1, 10000] loss: 1.423\n",
+      "[1, 12000] loss: 1.379\n",
+      "[2,  2000] loss: 1.322\n",
+      "[2,  4000] loss: 1.286\n",
+      "[2,  6000] loss: 1.288\n",
+      "[2,  8000] loss: 1.254\n",
+      "[2, 10000] loss: 1.258\n",
+      "[2, 12000] loss: 1.234\n",
+      "[3,  2000] loss: 1.153\n",
+      "[3,  4000] loss: 1.166\n",
+      "[3,  6000] loss: 1.142\n",
+      "[3,  8000] loss: 1.113\n",
+      "[3, 10000] loss: 1.124\n",
+      "[3, 12000] loss: 1.112\n",
+      "[4,  2000] loss: 1.041\n",
+      "[4,  4000] loss: 1.055\n",
+      "[4,  6000] loss: 1.047\n",
+      "[4,  8000] loss: 1.043\n",
+      "[4, 10000] loss: 1.032\n",
+      "[4, 12000] loss: 1.040\n",
+      "[5,  2000] loss: 0.959\n",
+      "[5,  4000] loss: 0.944\n",
+      "[5,  6000] loss: 0.992\n",
+      "[5,  8000] loss: 0.970\n",
+      "[5, 10000] loss: 0.971\n",
+      "[5, 12000] loss: 0.985\n",
+      "[6,  2000] loss: 0.886\n",
+      "[6,  4000] loss: 0.930\n",
+      "[6,  6000] loss: 0.923\n",
+      "[6,  8000] loss: 0.919\n",
+      "[6, 10000] loss: 0.929\n",
+      "[6, 12000] loss: 0.921\n",
+      "[7,  2000] loss: 0.853\n",
+      "[7,  4000] loss: 0.864\n",
+      "[7,  6000] loss: 0.872\n",
+      "[7,  8000] loss: 0.891\n",
+      "[7, 10000] loss: 0.901\n",
+      "[7, 12000] loss: 0.890\n",
+      "[8,  2000] loss: 0.847\n",
+      "[8,  4000] loss: 0.837\n",
+      "[8,  6000] loss: 0.841\n",
+      "[8,  8000] loss: 0.843\n",
+      "[8, 10000] loss: 0.857\n",
+      "[8, 12000] loss: 0.851\n",
+      "[9,  2000] loss: 0.796\n",
+      "[9,  4000] loss: 0.796\n",
+      "[9,  6000] loss: 0.821\n",
+      "[9,  8000] loss: 0.810\n",
+      "[9, 10000] loss: 0.824\n",
+      "[9, 12000] loss: 0.850\n",
+      "[10,  2000] loss: 0.769\n",
+      "[10,  4000] loss: 0.775\n",
+      "[10,  6000] loss: 0.791\n",
+      "[10,  8000] loss: 0.784\n",
+      "[10, 10000] loss: 0.801\n",
+      "[10, 12000] loss: 0.808\n",
+      "Finished Training\n"
      ]
     }
    ],
@@ -426,8 +495,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "id": "40daacbf",
+   "execution_count": 89,
+   "id": "b7110f94",
    "metadata": {},
    "outputs": [
     {
@@ -462,8 +531,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "id": "947ab7c6",
+   "execution_count": 90,
+   "id": "d9c2f8ee",
    "metadata": {
     "scrolled": false
    },
@@ -471,17 +540,17 @@
     {
      "data": {
       "text/plain": [
-       "tensor([[-2.8316, -2.4102, -4.2383, 11.5333, -3.9155,  8.0073,  3.0584, -2.4534,\n",
-       "          0.4686, -5.6444],\n",
-       "        [ 8.5944, 12.8058, -7.2924, -9.7063, -9.7219, -5.2240, -5.1813, -9.5875,\n",
-       "         22.2639,  5.1489],\n",
-       "        [ 2.4960,  1.5197, -0.5330, -1.4533, -1.1294, -1.1889, -1.0211, -3.1641,\n",
-       "          4.1252,  0.3412],\n",
-       "        [ 6.5885, -1.5851,  1.1628,  2.1218,  0.1511, -3.1658, -4.8285, -2.5244,\n",
-       "          4.8193,  0.0476]], grad_fn=<AddmmBackward0>)"
+       "tensor([[ -3.7847,  -6.5756,  -3.6473,  -0.5742,  -2.7465,  -2.2629,  -3.4084,\n",
+       "          -4.4373,  -4.1186,  -4.0529],\n",
+       "        [ -6.8913,  -7.6600, -15.1785, -17.4311, -27.8176, -16.8711, -17.0647,\n",
+       "         -16.8433,  -2.3828,  -8.2606],\n",
+       "        [ -0.7801,  -3.4905,  -5.6930,  -7.8075, -10.5838,  -8.4251,  -8.1241,\n",
+       "          -7.7415,   0.5760,  -3.0143],\n",
+       "        [  1.0865,  -2.7872,  -1.4922,  -2.6468,  -2.5667,  -4.0612,  -3.8635,\n",
+       "          -3.6113,   0.5606,  -1.4705]], grad_fn=<AddmmBackward0>)"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -494,8 +563,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "id": "f26a6e96",
+   "execution_count": 91,
+   "id": "116b6060",
    "metadata": {},
    "outputs": [
     {
@@ -516,15 +585,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "id": "789359d8",
+   "execution_count": 92,
+   "id": "08823e4b",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy of the network on the 10000 test images: 70 %\n"
+      "Accuracy of the network on the 10000 test images: 68 %\n"
      ]
     }
    ],
@@ -548,29 +617,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
-   "id": "7cb78aaa",
+   "execution_count": 93,
+   "id": "bf445981",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy for class: plane is 79.3 %\n",
-      "Accuracy for class: car   is 77.5 %\n",
-      "Accuracy for class: bird  is 55.1 %\n",
-      "Accuracy for class: cat   is 60.2 %\n",
-      "Accuracy for class: deer  is 63.9 %\n",
-      "Accuracy for class: dog   is 52.0 %\n",
-      "Accuracy for class: frog  is 78.6 %\n",
-      "Accuracy for class: horse is 75.7 %\n",
-      "Accuracy for class: ship  is 86.2 %\n",
-      "Accuracy for class: truck is 80.2 %\n"
+      "Accuracy for class: plane is 79.7 %\n",
+      "Accuracy for class: car   is 76.4 %\n",
+      "Accuracy for class: bird  is 52.7 %\n",
+      "Accuracy for class: cat   is 47.5 %\n",
+      "Accuracy for class: deer  is 67.5 %\n",
+      "Accuracy for class: dog   is 47.9 %\n",
+      "Accuracy for class: frog  is 77.3 %\n",
+      "Accuracy for class: horse is 68.5 %\n",
+      "Accuracy for class: ship  is 82.4 %\n",
+      "Accuracy for class: truck is 82.5 %\n"
      ]
     }
    ],
    "source": [
-    "# Determine percentages across the 10 classes \n",
+    "## Determine percentages across the 10 classes \n",
     "# prepare to count predictions for each class\n",
     "correct_pred = {classname: 0 for classname in classes}\n",
     "total_pred = {classname: 0 for classname in classes}\n",
@@ -597,7 +666,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "42b4ecfc",
+   "id": "89691971",
    "metadata": {},
    "outputs": [
     {
@@ -620,7 +689,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d5100070",
+   "id": "121f4d8f",
    "metadata": {},
    "outputs": [],
    "source": []
