--- a/pytorch_play/images/DCGAN.ipynb
+++ b/pytorch_play/images/DCGAN.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "3a625f59",
+   "id": "38fc4ce3",
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "365ad86b",
+   "id": "86edc7af",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "22c0dd4f",
+   "id": "4ccc42a4",
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "a6560d2c",
+   "id": "27cd9c12",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "555303ef",
+   "id": "68ad6dfc",
    "metadata": {},
    "source": [
     "# Generator"
@@ -175,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "9bd263ba",
+   "id": "628f4a5e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +214,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "43289201",
+   "id": "41d99002",
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4aabf65c",
+   "id": "d9680a02",
    "metadata": {},
    "source": [
     "# Discriminator "
@@ -269,7 +269,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "e384fcd8",
+   "id": "3d9d23b0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,7 +306,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "4e2a4d47",
+   "id": "72d93fdc",
    "metadata": {
     "scrolled": true
    },
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "77f9507b",
+   "id": "df9e60f2",
    "metadata": {},
    "source": [
     "# GAN Trainig "
@@ -362,7 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "45c411d9",
+   "id": "7144762b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -384,8 +384,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "824cc8f1",
+   "execution_count": 16,
+   "id": "fa9c044f",
    "metadata": {},
    "outputs": [
     {
@@ -400,7 +400,31 @@
       "[0/1][200/1583]\tLoss_D: 0.8708\tLoss_G: 8.6825\tD(x): 0.9223\tD(G(z)): 0.4877 / 0.0004\n",
       "[0/1][250/1583]\tLoss_D: 0.4456\tLoss_G: 4.7018\tD(x): 0.8723\tD(G(z)): 0.1977 / 0.0134\n",
       "[0/1][300/1583]\tLoss_D: 0.5896\tLoss_G: 4.0370\tD(x): 0.8680\tD(G(z)): 0.3211 / 0.0269\n",
-      "[0/1][350/1583]\tLoss_D: 0.9593\tLoss_G: 4.6642\tD(x): 0.9531\tD(G(z)): 0.5336 / 0.0170\n"
+      "[0/1][350/1583]\tLoss_D: 0.9593\tLoss_G: 4.6642\tD(x): 0.9531\tD(G(z)): 0.5336 / 0.0170\n",
+      "[0/1][400/1583]\tLoss_D: 0.4943\tLoss_G: 3.3673\tD(x): 0.7318\tD(G(z)): 0.0933 / 0.0616\n",
+      "[0/1][450/1583]\tLoss_D: 0.5843\tLoss_G: 3.4833\tD(x): 0.6684\tD(G(z)): 0.0547 / 0.0702\n",
+      "[0/1][500/1583]\tLoss_D: 0.5249\tLoss_G: 4.3578\tD(x): 0.8460\tD(G(z)): 0.2242 / 0.0319\n",
+      "[0/1][550/1583]\tLoss_D: 0.7048\tLoss_G: 2.4174\tD(x): 0.6511\tD(G(z)): 0.0863 / 0.1251\n",
+      "[0/1][600/1583]\tLoss_D: 0.9095\tLoss_G: 6.9514\tD(x): 0.8463\tD(G(z)): 0.4104 / 0.0047\n",
+      "[0/1][650/1583]\tLoss_D: 0.4862\tLoss_G: 4.2805\tD(x): 0.9185\tD(G(z)): 0.2931 / 0.0216\n",
+      "[0/1][700/1583]\tLoss_D: 0.3079\tLoss_G: 4.8856\tD(x): 0.8188\tD(G(z)): 0.0414 / 0.0138\n",
+      "[0/1][750/1583]\tLoss_D: 0.4200\tLoss_G: 4.2337\tD(x): 0.8195\tD(G(z)): 0.1596 / 0.0223\n",
+      "[0/1][800/1583]\tLoss_D: 1.1179\tLoss_G: 2.7396\tD(x): 0.4639\tD(G(z)): 0.0130 / 0.0982\n",
+      "[0/1][850/1583]\tLoss_D: 0.6774\tLoss_G: 3.5785\tD(x): 0.7133\tD(G(z)): 0.1801 / 0.0457\n",
+      "[0/1][900/1583]\tLoss_D: 0.9311\tLoss_G: 2.5103\tD(x): 0.5692\tD(G(z)): 0.1180 / 0.1479\n",
+      "[0/1][950/1583]\tLoss_D: 0.5537\tLoss_G: 2.8938\tD(x): 0.6925\tD(G(z)): 0.0840 / 0.0800\n",
+      "[0/1][1000/1583]\tLoss_D: 1.0525\tLoss_G: 3.3933\tD(x): 0.4934\tD(G(z)): 0.0262 / 0.0751\n",
+      "[0/1][1050/1583]\tLoss_D: 0.5092\tLoss_G: 5.0596\tD(x): 0.9044\tD(G(z)): 0.2886 / 0.0093\n",
+      "[0/1][1100/1583]\tLoss_D: 0.4238\tLoss_G: 4.4289\tD(x): 0.8431\tD(G(z)): 0.1712 / 0.0249\n",
+      "[0/1][1150/1583]\tLoss_D: 0.9207\tLoss_G: 1.7427\tD(x): 0.5511\tD(G(z)): 0.1103 / 0.2360\n",
+      "[0/1][1200/1583]\tLoss_D: 0.4317\tLoss_G: 4.6925\tD(x): 0.8915\tD(G(z)): 0.2379 / 0.0176\n",
+      "[0/1][1250/1583]\tLoss_D: 1.0641\tLoss_G: 6.3693\tD(x): 0.9090\tD(G(z)): 0.5163 / 0.0055\n",
+      "[0/1][1300/1583]\tLoss_D: 0.3202\tLoss_G: 3.3822\tD(x): 0.8404\tD(G(z)): 0.0749 / 0.0598\n",
+      "[0/1][1350/1583]\tLoss_D: 0.5810\tLoss_G: 2.7068\tD(x): 0.7228\tD(G(z)): 0.1344 / 0.1063\n",
+      "[0/1][1400/1583]\tLoss_D: 1.2036\tLoss_G: 7.1866\tD(x): 0.9599\tD(G(z)): 0.5844 / 0.0020\n",
+      "[0/1][1450/1583]\tLoss_D: 0.6516\tLoss_G: 5.7613\tD(x): 0.9024\tD(G(z)): 0.3628 / 0.0077\n",
+      "[0/1][1500/1583]\tLoss_D: 0.5944\tLoss_G: 4.6193\tD(x): 0.8303\tD(G(z)): 0.2835 / 0.0155\n",
+      "[0/1][1550/1583]\tLoss_D: 0.4592\tLoss_G: 4.8229\tD(x): 0.8925\tD(G(z)): 0.2525 / 0.0149\n"
      ]
     }
    ],
@@ -495,7 +519,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "460011c7",
+   "id": "0e079e0e",
    "metadata": {},
    "outputs": [],
    "source": []
