--- a/pytorch_play/text/text_classification_torchtext.ipynb
+++ b/pytorch_play/text/text_classification_torchtext.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "b67aafc7",
+   "id": "8e970bbc",
    "metadata": {},
    "outputs": [
     {
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "077a3093",
+   "id": "c6e3af7f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "9a9adcf4",
+   "id": "6aa15082",
    "metadata": {},
    "outputs": [
     {
@@ -65,13 +65,390 @@
     }
    ],
    "source": [
-    "vocab(['here', 'is', 'an', 'example'])\n"
+    "vocab(['here', 'is', 'an', 'example'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "14e4316a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[475, 21, 2, 30, 5297]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# preprocess\n",
+    "text_pipeline = lambda x: vocab(tokenizer(x))\n",
+    "label_pipeline = lambda x: int(x) - 1\n",
+    "print(text_pipeline('here is the an example'))\n",
+    "label_pipeline('10')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "7a1f3c5d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# dataloader \n",
+    "from torch.utils.data import DataLoader\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "\n",
+    "def collate_batch(batch):\n",
+    "    label_list, text_list, offsets = [], [], [0]\n",
+    "    for (_label, _text) in batch:\n",
+    "        label_list.append(label_pipeline(_label))\n",
+    "        processed_text = torch.tensor(text_pipeline(_text), dtype=torch.int64)\n",
+    "        text_list.append(processed_text)\n",
+    "        offsets.append(processed_text.size(0))\n",
+    "    label_list = torch.tensor(label_list, dtype=torch.int64)\n",
+    "    offsets = torch.tensor(offsets[:-1]).cumsum(dim=0)\n",
+    "    text_list = torch.cat(text_list)\n",
+    "    return label_list.to(device), text_list.to(device), offsets.to(device)\n",
+    "\n",
+    "train_iter = AG_NEWS(split='train')\n",
+    "dataloader = DataLoader(train_iter, batch_size=8, shuffle=False, collate_fn=collate_batch)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "744a1c1e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Model \n",
+    "from torch import nn\n",
+    "\n",
+    "class TextClassificationModel(nn.Module):\n",
+    "\n",
+    "    def __init__(self, vocab_size, embed_dim, num_class):\n",
+    "        super(TextClassificationModel, self).__init__()\n",
+    "        self.embedding = nn.EmbeddingBag(vocab_size, embed_dim, sparse=True)\n",
+    "        self.fc = nn.Linear(embed_dim, num_class)\n",
+    "        self.init_weights()\n",
+    "\n",
+    "    def init_weights(self):\n",
+    "        initrange = 0.5\n",
+    "        self.embedding.weight.data.uniform_(-initrange, initrange)\n",
+    "        self.fc.weight.data.uniform_(-initrange, initrange)\n",
+    "        self.fc.bias.data.zero_()\n",
+    "\n",
+    "    def forward(self, text, offsets):\n",
+    "        embedded = self.embedding(text, offsets)\n",
+    "        return self.fc(embedded)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "78ad532b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get model and train iteration \n",
+    "train_iter = AG_NEWS(split='train')\n",
+    "num_class = len(set([label for (label, text) in train_iter]))\n",
+    "vocab_size = len(vocab)\n",
+    "emsize = 64\n",
+    "model = TextClassificationModel(vocab_size, emsize, num_class).to(device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "9ada12c7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# train and eval function \n",
+    "import time\n",
+    "\n",
+    "def train(dataloader):\n",
+    "    model.train()\n",
+    "    total_acc, total_count = 0, 0\n",
+    "    log_interval = 500\n",
+    "    start_time = time.time()\n",
+    "\n",
+    "    for idx, (label, text, offsets) in enumerate(dataloader):\n",
+    "        optimizer.zero_grad()\n",
+    "        predicted_label = model(text, offsets)\n",
+    "        loss = criterion(predicted_label, label)\n",
+    "        loss.backward()\n",
+    "        torch.nn.utils.clip_grad_norm_(model.parameters(), 0.1)\n",
+    "        optimizer.step()\n",
+    "        total_acc += (predicted_label.argmax(1) == label).sum().item()\n",
+    "        total_count += label.size(0)\n",
+    "        if idx % log_interval == 0 and idx > 0:\n",
+    "            elapsed = time.time() - start_time\n",
+    "            print('| epoch {:3d} | {:5d}/{:5d} batches '\n",
+    "                  '| accuracy {:8.3f}'.format(epoch, idx, len(dataloader),\n",
+    "                                              total_acc/total_count))\n",
+    "            total_acc, total_count = 0, 0\n",
+    "            start_time = time.time()\n",
+    "\n",
+    "def evaluate(dataloader):\n",
+    "    model.eval()\n",
+    "    total_acc, total_count = 0, 0\n",
+    "\n",
+    "    with torch.no_grad():\n",
+    "        for idx, (label, text, offsets) in enumerate(dataloader):\n",
+    "            predicted_label = model(text, offsets)\n",
+    "            loss = criterion(predicted_label, label)\n",
+    "            total_acc += (predicted_label.argmax(1) == label).sum().item()\n",
+    "            total_count += label.size(0)\n",
+    "    return total_acc/total_count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "85149bda",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "| epoch   1 |   500/ 1782 batches | accuracy    0.928\n",
+      "| epoch   1 |  1000/ 1782 batches | accuracy    0.927\n",
+      "| epoch   1 |  1500/ 1782 batches | accuracy    0.925\n",
+      "-----------------------------------------------------------\n",
+      "| end of epoch   1 | time:  8.46s | valid accuracy    0.917 \n",
+      "-----------------------------------------------------------\n",
+      "| epoch   2 |   500/ 1782 batches | accuracy    0.932\n",
+      "| epoch   2 |  1000/ 1782 batches | accuracy    0.932\n",
+      "| epoch   2 |  1500/ 1782 batches | accuracy    0.932\n",
+      "-----------------------------------------------------------\n",
+      "| end of epoch   2 | time:  8.45s | valid accuracy    0.917 \n",
+      "-----------------------------------------------------------\n",
+      "| epoch   3 |   500/ 1782 batches | accuracy    0.939\n",
+      "| epoch   3 |  1000/ 1782 batches | accuracy    0.938\n",
+      "| epoch   3 |  1500/ 1782 batches | accuracy    0.936\n",
+      "-----------------------------------------------------------\n",
+      "| end of epoch   3 | time:  9.29s | valid accuracy    0.908 \n",
+      "-----------------------------------------------------------\n",
+      "| epoch   4 |   500/ 1782 batches | accuracy    0.953\n",
+      "| epoch   4 |  1000/ 1782 batches | accuracy    0.946\n",
+      "| epoch   4 |  1500/ 1782 batches | accuracy    0.950\n",
+      "-----------------------------------------------------------\n",
+      "| end of epoch   4 | time:  8.53s | valid accuracy    0.918 \n",
+      "-----------------------------------------------------------\n",
+      "| epoch   5 |   500/ 1782 batches | accuracy    0.951\n",
+      "| epoch   5 |  1000/ 1782 batches | accuracy    0.952\n",
+      "| epoch   5 |  1500/ 1782 batches | accuracy    0.950\n",
+      "-----------------------------------------------------------\n",
+      "| end of epoch   5 | time:  8.46s | valid accuracy    0.920 \n",
+      "-----------------------------------------------------------\n",
+      "| epoch   6 |   500/ 1782 batches | accuracy    0.952\n",
+      "| epoch   6 |  1000/ 1782 batches | accuracy    0.954\n",
+      "| epoch   6 |  1500/ 1782 batches | accuracy    0.953\n",
+      "-----------------------------------------------------------\n",
+      "| end of epoch   6 | time:  8.41s | valid accuracy    0.920 \n",
+      "-----------------------------------------------------------\n",
+      "| epoch   7 |   500/ 1782 batches | accuracy    0.953\n",
+      "| epoch   7 |  1000/ 1782 batches | accuracy    0.953\n",
+      "| epoch   7 |  1500/ 1782 batches | accuracy    0.956\n",
+      "-----------------------------------------------------------\n",
+      "| end of epoch   7 | time:  8.45s | valid accuracy    0.919 \n",
+      "-----------------------------------------------------------\n",
+      "| epoch   8 |   500/ 1782 batches | accuracy    0.954\n",
+      "| epoch   8 |  1000/ 1782 batches | accuracy    0.953\n",
+      "| epoch   8 |  1500/ 1782 batches | accuracy    0.954\n",
+      "-----------------------------------------------------------\n",
+      "| end of epoch   8 | time:  8.44s | valid accuracy    0.919 \n",
+      "-----------------------------------------------------------\n",
+      "| epoch   9 |   500/ 1782 batches | accuracy    0.956\n",
+      "| epoch   9 |  1000/ 1782 batches | accuracy    0.952\n",
+      "| epoch   9 |  1500/ 1782 batches | accuracy    0.955\n",
+      "-----------------------------------------------------------\n",
+      "| end of epoch   9 | time:  8.44s | valid accuracy    0.919 \n",
+      "-----------------------------------------------------------\n",
+      "| epoch  10 |   500/ 1782 batches | accuracy    0.955\n",
+      "| epoch  10 |  1000/ 1782 batches | accuracy    0.953\n",
+      "| epoch  10 |  1500/ 1782 batches | accuracy    0.954\n",
+      "-----------------------------------------------------------\n",
+      "| end of epoch  10 | time:  8.38s | valid accuracy    0.919 \n",
+      "-----------------------------------------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "# training \n",
+    "from torch.utils.data.dataset import random_split\n",
+    "from torchtext.data.functional import to_map_style_dataset\n",
+    "# Hyperparameters\n",
+    "EPOCHS = 10 # epoch\n",
+    "LR = 5  # learning rate\n",
+    "BATCH_SIZE = 64 # batch size for training\n",
+    "\n",
+    "criterion = torch.nn.CrossEntropyLoss()\n",
+    "optimizer = torch.optim.SGD(model.parameters(), lr=LR)\n",
+    "scheduler = torch.optim.lr_scheduler.StepLR(optimizer, 1.0, gamma=0.1)\n",
+    "total_accu = None\n",
+    "train_iter, test_iter = AG_NEWS()\n",
+    "train_dataset = to_map_style_dataset(train_iter)\n",
+    "test_dataset = to_map_style_dataset(test_iter)\n",
+    "num_train = int(len(train_dataset) * 0.95)\n",
+    "split_train_, split_valid_ = \\\n",
+    "    random_split(train_dataset, [num_train, len(train_dataset) - num_train])\n",
+    "\n",
+    "train_dataloader = DataLoader(split_train_, batch_size=BATCH_SIZE,\n",
+    "                              shuffle=True, collate_fn=collate_batch)\n",
+    "valid_dataloader = DataLoader(split_valid_, batch_size=BATCH_SIZE,\n",
+    "                              shuffle=True, collate_fn=collate_batch)\n",
+    "test_dataloader = DataLoader(test_dataset, batch_size=BATCH_SIZE,\n",
+    "                             shuffle=True, collate_fn=collate_batch)\n",
+    "\n",
+    "for epoch in range(1, EPOCHS + 1):\n",
+    "    epoch_start_time = time.time()\n",
+    "    train(train_dataloader)\n",
+    "    accu_val = evaluate(valid_dataloader)\n",
+    "    if total_accu is not None and total_accu > accu_val:\n",
+    "        scheduler.step()\n",
+    "    else:\n",
+    "        total_accu = accu_val\n",
+    "    print('-' * 59)\n",
+    "    print('| end of epoch {:3d} | time: {:5.2f}s | '\n",
+    "          'valid accuracy {:8.3f} '.format(epoch,\n",
+    "                                           time.time() - epoch_start_time,\n",
+    "                                           accu_val))\n",
+    "    print('-' * 59)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "f0eb6c84",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Checking the results of test dataset.\n",
+      "test accuracy    0.910\n"
+     ]
+    }
+   ],
+   "source": [
+    "# eval \n",
+    "print('Checking the results of test dataset.')\n",
+    "accu_test = evaluate(test_dataloader)\n",
+    "print('test accuracy {:8.3f}'.format(accu_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "3b9793bc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is a Sports news\n"
+     ]
+    }
+   ],
+   "source": [
+    "# inference \n",
+    "ag_news_label = {1: \"World\",\n",
+    "                 2: \"Sports\",\n",
+    "                 3: \"Business\",\n",
+    "                 4: \"Sci/Tec\"}\n",
+    "\n",
+    "def predict(text, text_pipeline):\n",
+    "    with torch.no_grad():\n",
+    "        text = torch.tensor(text_pipeline(text))\n",
+    "        output = model(text, torch.tensor([0]))\n",
+    "        return output.argmax(1).item() + 1\n",
+    "\n",
+    "ex_text_str = \"MEMPHIS, Tenn. – Four days ago, Jon Rahm was \\\n",
+    "    enduring the season’s worst weather conditions on Sunday at The \\\n",
+    "    Open on his way to a closing 75 at Royal Portrush, which \\\n",
+    "    considering the wind and the rain was a respectable showing. \\\n",
+    "    Thursday’s first round at the WGC-FedEx St. Jude Invitational \\\n",
+    "    was another story. With temperatures in the mid-80s and hardly any \\\n",
+    "    wind, the Spaniard was 13 strokes better in a flawless round. \\\n",
+    "    Thanks to his best putting performance on the PGA Tour, Rahm \\\n",
+    "    finished with an 8-under 62 for a three-stroke lead, which \\\n",
+    "    was even more impressive considering he’d never played the \\\n",
+    "    front nine at TPC Southwind.\"\n",
+    "\n",
+    "model = model.to(\"cpu\")\n",
+    "\n",
+    "print(\"This is a %s news\" %ag_news_label[predict(ex_text_str, text_pipeline)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "3c6be4c9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Sports'"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "input_str = \"This is sports news, hahah sports I love soccer hahahhah sports sports manchester united takes the win 1-0\"\n",
+    "\n",
+    "ag_news_label[predict(input_str, text_pipeline)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "5957230c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'World'"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "input_str = \"This just in, china has attacked germany, I repeat china has launched a full scale chicken invasion on germany and its allies!\"\n",
+    "\n",
+    "ag_news_label[predict(input_str, text_pipeline)]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "55b70ae3",
+   "id": "c673b2b1",
    "metadata": {},
    "outputs": [],
    "source": []
